# micropad

./: .gitignore  README.md
firmware/: platformio.ini
firmware/lib/Led/: Led.h
firmware/src/: main.cpp
micropad_engine/: Cargo.toml
micropad_engine/src/: hotkeys.rs  main.rs
micropad_engine/ui/: app.slint
micropad_engine/ui/components/: ComboBoxScroll.slint  TopMenu.slint
micropad_engine/ui/tabs/: BacklightTab.slint  HotkeysTab.slint
